# midisyx

./: README.md  pyproject.toml  setup.py  syxident.py
midisyx/: manufacturer.py  message.py
src/midisyx/: manufacturer.py  message.py
